[tool.poetry]
name = "chronograph"
version = "0.1.0"
description = "Python time tracking"
authors = ["drivingmenuts <albert.freeman@gmail.com>"]
license = "LGPL v2.1"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
rich = "^13.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
